--- a/docs/fe_advance/React_basis/05待办事项.md
+++ b/docs/fe_advance/React_basis/05待办事项.md
@@ -1,12 +1,4 @@
 
-之前通过四篇博客笔记我们学习了React基础，算是一个小小的入门，没有看过的可以点击下方链接瞅瞅~（配合B站尚硅谷最新React视频一起学习效果更佳）
-- [【React】入门概述 - 虚拟DOM与原生DOM - JSX语法 - React基本使用](https://juejin.cn/post/7015185218638184462)
-- [【React】面向组件编程 - 基本理解和使用 - 组件三大核心属性state-props-refs - 事件处理 - 非受控组件 - 受控组件 - 高阶函数](https://juejin.cn/post/7015402441298411533)
-- [【React】组件的生命周期 - 虚拟DOM - DOM Diffing算法](https://juejin.cn/post/7015766065183621156)
-- [【React】React应用 - React脚手架 - create-react-app - 创建Hello React](https://juejin.cn/post/7016278634348412964)
-
-今天我们使用React来实现一个待办事项页面搭建
-
 > 之前用Vue写过这个TodoList 页面，这次用React再写一次，步骤功能都是类似的，就是语法和用法有点区别
 
 [【Vue】Vue模块化实战-demo2-任务清单todoList](https://blog.csdn.net/weixin_44972008/article/details/113487414)
@@ -16,6 +8,9 @@
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ba754fe7d0af46aea65c2a7ec58e4f5c~tplv-k3u1fbpfcp-zoom-1.image)
 # 2. 界面模块拆分
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/a69344bcd2e843bb8918c7be1b3a6a8f~tplv-k3u1fbpfcp-zoom-1.image)
+
+目录结构
+
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c8dff928049e423a9c944ae8033b6cb1~tplv-k3u1fbpfcp-zoom-1.image)
 # 3. 主页 index.html
 
@@ -130,7 +125,6 @@ export default class Header extends Component {
     )
   }
 }
-
 ```
 
 ## Header/index.css
@@ -169,7 +163,6 @@ export default class List extends Component {
     )
   }
 }
-
 ```
 
 ## List/index.css
@@ -411,6 +404,7 @@ export default class Item extends Component {
 ## 5.2 动态添加todo
 
 子组件要向父组件 传递 得到的输入值
+
 可以通过调用函数， 传递参数的形式 来传递状态
 
 
@@ -449,9 +443,11 @@ export default class App extends Component {
 
 ### Header/index.js
 生成唯一id的库
-uuid
-nanoid
+- uuid
+- nanoid
+
 `npm install nanoid`
+
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/07735faab942446491aad5c9383ccf97~tplv-k3u1fbpfcp-zoom-1.image)
 
 父组件通过标签属性传递了一个函数给子组件，子组件可以通过this.props来调用函数
