--- a/docs/fe_advance/React_basis/03生命周期.md
+++ b/docs/fe_advance/React_basis/03生命周期.md
@@ -25,13 +25,13 @@ class Life extends React.Component{
     ReactDOM.unmountComponentAtNode(document.getElementById('test'))
   }
 
-  //组件挂完毕
+  //组件挂载完毕
   componentDidMount(){
     console.log('componentDidMount');
     this.timer = setInterval(() => {
       //获取原状态
       let {opacity} = this.state
-      //减小0.1
+      //减小 0.1
       opacity -= 0.1
       if(opacity <= 0) opacity = 1
       //设置新的透明度
@@ -61,6 +61,9 @@ ReactDOM.render(<Life/>,document.getElementById('test'))
 ```
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/fc4090cc0a5f44248e534fec82ab82d2~tplv-k3u1fbpfcp-zoom-1.image)
 ## 1.3 生命周期的三个阶段（旧）
+
+v16.8.4
+
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/896e2a2a89f642129503d283b41876d3~tplv-k3u1fbpfcp-zoom-1.image)
 ### 1.3.1 初始化阶段
 由`ReactDOM.render()`触发---初次渲染
@@ -143,13 +146,16 @@ ReactDOM.render(<Count/>, document.getElementById('test'))
 
 
 ## 1.4 生命周期的三个阶段（新）
+
+v17.0.1
+
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/3bceabc916b74ff9b9a2f4552fd9b530~tplv-k3u1fbpfcp-zoom-1.image)
 ### 1. 初始化阶段
 由`ReactDOM.render()`触发 —— 初次渲染
 1.	`constructor()` —— 类组件中的构造函数
 2.	`static getDerivedStateFromProps(props, state)` 从props得到一个派生的状态【新增】
 3.	`render()` —— 挂载组件
-4.	`componentDidMount()` —— 组件挂载完成 比较==常用==
+4.	`componentDidMount()` —— 组件挂载完成 比较常用
 
 ### 2. 更新阶段
 由组件内部`this.setSate()`或父组件重新`render`触发或强制更新`forceUpdate()`
