--- a/docs/fe_advance/React_basis/01入门概述.md
+++ b/docs/fe_advance/React_basis/01入门概述.md
@@ -150,6 +150,11 @@ React.createElement(
 
 > JSX方式就是js创建虚拟DOM的语法糖
 
+> 在编译之后，JSX 表达式会被转为普通 JavaScript 函数调用，并且对其取值后得到 JavaScript 对象。
+
+> 可以在 if 语句和 for 循环的代码块中使用 JSX，将 JSX 赋值给变量，把 JSX 当作参数传入，以及从函数中返回 JSX
+
+
 ```javascript
 <div id="test"></div>
 
