--- a/docs/fe_advance/React_basis/05待办事项.md
+++ b/docs/fe_advance/React_basis/05待办事项.md
@@ -409,10 +409,13 @@ export default class Item extends Component {
 
 
 ### App.jsx
+
 状态在父组件中，修改状态的操作就定义在父组件中
 
 在父组件中定义一个addTodo函数，然后通过标签传递给子组件
+
 addTodo函数接受一个参数，这个参数就是要接受的子组件的数据
+
 通过这个参数，将子组件的数据传给父组件
 
 ```javascript
@@ -451,6 +454,7 @@ export default class App extends Component {
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/07735faab942446491aad5c9383ccf97~tplv-k3u1fbpfcp-zoom-1.image)
 
 父组件通过标签属性传递了一个函数给子组件，子组件可以通过this.props来调用函数
+
 函数的参数，就是子组件要传递给父组件的数据
 
 ```javascript
@@ -485,9 +489,10 @@ export default class Header extends Component {
 ## 5.3 鼠标悬浮高亮
 
 定义一个mouse状态，用来 标识鼠标移入移出
+
 通过mouse状态的改变，来改变style样式（背景颜色+删除按钮显示与隐藏）
 
-Item/index.js
+### Item/index.js
 ```javascript
 export default class Item extends Component {
   // 标识鼠标移入移出
@@ -522,6 +527,7 @@ export default class Item extends Component {
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/850d339e0d4649e8b887a135a056ffb1~tplv-k3u1fbpfcp-zoom-1.image)
 ## 5.4 勾选 改变 状态
 勾选前面的选中框，要改变到state中的数据
+
 根据选中的框所属的todo的id找到数据，根据更改后done的值更新相应的done的值
 
 ### App.jsx
@@ -583,6 +589,7 @@ export default class List extends Component {
 通过List中转终于拿到祖先组件App中的函数updateTodo
 
 组件中定义onChange事件的回调函数handleCheck ，【高阶函数+柯里化】
+
  在回调函数中返回传递过来的函数并传入参数
 
 ```javascript
@@ -617,6 +624,7 @@ export default class Item extends Component {
 > 类型及必要性设置
 
 自行安装 prop-types 库 `npm i prop-types`
+
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/0a8f74e3709d4214b67c7c605e6f0e17~tplv-k3u1fbpfcp-zoom-1.image)
 
 ```javascript
@@ -651,10 +659,12 @@ export default class Item extends Component {
 ```
 
 ## 5.5 删除一个todo
+
 选中一个todo，点击删除按钮，删除这个todo
 
 ### App.jsx
 因为状态数据在父组件中，所以删除todo的函数就定义在App中
+
 然后将函数传递给子组件
 
 ```javascript
