--- a/docs/fe_advance/React_basis/02面向组件.md
+++ b/docs/fe_advance/React_basis/02面向组件.md
@@ -2,6 +2,8 @@
 > 今天继续来学习React基础，我们一起学习面向组件编程，理解组件的概念（上一篇）以及基本使用，还会了解到非受控组件与受控组件，还有你经常听到的高阶函数以及柯里化
 
 # 1. 基本理解和使用
+
+组件，从概念上类似于 JavaScript 函数。它接受任意的入参（即 “props”），并返回用于描述页面展示内容的 React 元素。
 ## 1.1 函数式组件
 
 ```javascript
@@ -250,7 +252,7 @@ ReactDOM.render(<Weather/>,document.getElementById('test'))
 1.	通过标签属性从组件**外**向组件**内**传递变化的数据
 2.	注意: 组件内部**不可修改**`props`数据，是只读的
 
-
+> 所有 React 组件都必须像纯函数一样保护它们的 props 不被更改。
 ## 3.3 尝试一下
 
 ```javascript
@@ -709,6 +711,8 @@ ReactDOM.render(<Login />, document.getElementById('test'))
 ![在这里插入图片描述](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/ebb79a06089c43d5933e19df70258f7e~tplv-k3u1fbpfcp-zoom-1.image)
 ## 6.4 受控组件
 页面中输入类的DOM，随着输入的过程，将数据存储在状态`state`中，需要用的时候在从状态`state`中取（有点类似Vue中的双向数据绑定）
+
+> 渲染表单的 React 组件还控制着用户输入过程中表单发生的操作。被 React 以这种方式控制取值的表单输入元素就叫做“受控组件”。
 
 ```javascript
 // 创建组件
