修改HTML相关笔记

--- a/docs/fe_basics/css/01选择器.md
+++ b/docs/fe_basics/css/01选择器.md
@@ -36,13 +36,26 @@ CSS样式表 或 级联样式表
 
 # 2. 引入方式 三种样式表
 1. 行内样式表（行内式）
+```html
+<span style="font-size: 32px; margin: 21px 0;">行内式</span>
+```
 2. 内部样式表（嵌入式）
+
+```html
+<style>
+  span {
+    font-size: 32px;
+    margin: 21px 0;
+  }
+</style>
+```
+
 3. 外部样式表（链接式）
 
-## 2.1 外部样式表
-1. 新建一个后缀名为.css的样式文件，把所有CSS代码都放入此文件中
-2. 在HTML页面中，使用`<link>`标签引入这个文件
-```
+- 新建一个后缀名为.css的样式文件，把所有CSS代码都放入此文件中
+- 在HTML页面中，使用`<link>`标签引入这个文件
+
+```html
 <link rel="stylesheet" href="css文件路径">
 ```
 
@@ -51,7 +64,7 @@ CSS样式表 或 级联样式表
 ---|---|---|---|---
 行内样式表|书写方便，权重高|结构样式混写|较少|控制一个标签
 内部样式表|部分结构和样式分离|没有彻底分离|较多|控制一个页面
-外部样式表|完全实现结构二号样式相分离|需要引入|最多|控制多个页面
+外部样式表|完全实现结构与样式相分离|需要引入|最多|控制多个页面
 
 
 # 3. 三大特性
