--- a/docs/fe_basics/html/01总体概述.md
+++ b/docs/fe_basics/html/01总体概述.md
@@ -1,5 +1,7 @@
 # 1. HTML 起步
 
+[HTML 元素参考 - HTML（超文本标记语言） | MDN (mozilla.org)](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element)
+
 ## 1.1 网页的“三驾马车”
 
 - HTML：网页的基本结构 
