--- a/docs/fe_basics/html/05表单标签.md
+++ b/docs/fe_basics/html/05表单标签.md
@@ -113,3 +113,33 @@ maxlength | 正整数 | 规定输入字段中字符的最大长度
 - IE9+以上版本才支持
 
 
+# 3. 新增的input类型
+属性值|说明
+---|---
+type="email"|限制用户输入必须为email类型
+url|url
+data|日期
+time|时间
+month|月
+week|周
+number|数字
+tel|手机号码
+search|搜索框
+color|生成一个颜色选择表单
+
+# 4. 新增的表单属性
+属性|值|说明
+---|---|---
+required|required| 必填。表单拥有该属性表示其内容不能为空
+placeholder|提示文本|表单的提示信息，存在默认值将不显示
+autofocus|autofocus|自动聚焦属性，页面加载完成自动聚焦到指定表单
+autocomplete|off/on|记住之前输入的文字并提示，默认打开（需要放在表单内，同时加上name属性，同时成功提交）
+multiple|multiple|可以多选文件提交
+
+修改placehoder里的颜色
+
+```css
+input::placeholder {
+    color: pink;
+}
+```
