--- a/docs/fe_basics/html/02常用标签.md
+++ b/docs/fe_basics/html/02常用标签.md
@@ -81,7 +81,7 @@ span 跨度、跨距 (一行可以多个 小盒子)
 src | 图片路径 |必须属性 
 alt | 文本 | 替换文本：图像不能显示的文字
 title | 文本 | 提示文本：鼠标放在图像上显示的文字
-width | 像素 | 设置图像宽度
+width | 像素 | 设置图像宽度（如果需要改变图片的尺寸，应该使用CSS而不是HTML）
 height | 像素 | 设置图像高度
 border | 像素 | 设置图像边框粗细
 
