--- a/docs/fe_basics/html/04结构标签.md
+++ b/docs/fe_basics/html/04结构标签.md
@@ -1,31 +1,26 @@
 
-# 1. 新增的语义化标签
-之前都是用没有语义的div标签
+## 1. 语义化结构标签
 
-```HTML
-<header> /*头部标签*/
-<nav>  /*导航标签*/
-<article> /*内容标签*/
-<section> /*定义文档某个区域*/
-<aside> /*侧边栏标签*/
-<footer> /*尾部标签*/
-```
-![image](https://img-blog.csdnimg.cn/img_convert/75c628a5e44f78bbb992cbde8073e052.png)
+之前都是用没有语义的`div`标签
 
 
-
-
-# 4. HTML5 语义化
-
-
-> 最后，我们来聊聊HTML5的标签语义化~ 为什么要有语义化标签？ 因为根据内容的结构，选择合适的标签构建出便于**开发者**阅读的可维护性更⾼的代码结构，同时能够让**机器**更好地解析。
+> 为什么要有语义化标签？ 因为根据内容的结构，选择合适的标签构建出便于**开发者**阅读的可维护性更⾼的代码结构，同时能够让**机器**更好地解析。
 
 
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/b2b754646dfa442387b1e7b8d7c11e9e~tplv-k3u1fbpfcp-watermark.image)
 
 使用语义化前都用div标签，不太好读~~
 
+![image](https://img-blog.csdnimg.cn/img_convert/75c628a5e44f78bbb992cbde8073e052.png)
 
+```HTML
+<header> /*头部标签, 页眉*/
+<nav>  /*导航标签*/
+<main> /* 主内容。主内容中还可以有各种子内容区段，可用<article>、<section> 和 <div> 等元素表示。*/
+<section> /*定义文档某个区域*/
+<aside> /*侧边栏标签*/
+<footer> /*尾部标签*/
+```
 
 ## 4.1 区块
 
@@ -150,6 +145,7 @@
 ## 4.2 分组
 
 `<figure>/<figcaption>`
+
 - `<figure>` 包裹被独⽴引⽤的内容：图表、插图、代码等，通常会有⼀个标题
 - `<figcaption>` 与其相关联的图表的说明/标题，通常位于`<figure>`的第⼀个或最后⼀个
 
@@ -161,7 +157,6 @@
     <figcaption>YK菌 logo</figcaption>
 </figure>
 ```
-
 
 
 `<blockquote>`
@@ -186,29 +181,7 @@
 </figure>
 
 
-`<dl>/<dt>/<dd>`
-- ⽤于描述⼀组键值对
-- 通常⽤于元数据、术语定义等场景
-
-```html
-<dl>
-    <dt>YK菌</dt>
-    <dd>是一个好人.</dd>
-    <dd>是一个大好人.</dd>
-    <dd>博客写的特别好.</dd>
-</dl>
-```
-这是效果：
-
-<dl>
-    <dt>YK菌</dt>
-    <dd>是一个好人.</dd>
-    <dd>是一个大好人.</dd>
-    <dd>博客写的特别好.</dd>
-</dl>
-
 ## 4.3 文本
-
 
 `<cite>`
 - `<cite>`元素通常⽤于引⽤作品标题
@@ -231,5 +204,3 @@
 `<code>` 代码⽚段
 
 `<small>` 免责声明、注意事项等
-
-
