--- a/docs/fe_basics/css/01概述.md
+++ b/docs/fe_basics/css/01概述.md
@@ -19,6 +19,8 @@ CSS样式表 或 级联样式表
 
 ## 1.4 语法规范
 
+> CSS中的注释以`/*`开头，以`*/`结尾
+
 `属性(property): 值(value);`
 
 选择器 + { 声明( 属性(property): 值(value); )...}
@@ -36,7 +38,6 @@ CSS样式表 或 级联样式表
     <p>有点意思</p>
 </body>
 ```
-
 
 # 2. 引入方式：三种
 
@@ -66,6 +67,9 @@ CSS样式表 或 级联样式表
 <link rel="stylesheet" href="css文件路径">
 ```
 
+> 使用`@import`可以在样式表中引入别的样式表 比如：`@import 'styles2.css';`
+
+
 ## 2.2 总结
 
 样式表|优点|缺点|使用情况|控制范围
@@ -93,7 +97,7 @@ body {
 }
 ```
 
-## 3.3 优先级
+## 3.3 选择器优先级
 
 同一个元素指定多个选择器，就会有优先级的产生
 
