函数式编程

--- a/docs/fe_code/functional_programming/01函数式编程概述.md
+++ b/docs/fe_code/functional_programming/01函数式编程概述.md
@@ -138,7 +138,8 @@ pay(5)
 ```
 
 ### 使用高阶函数的意义
-高阶函数是用来抽象通用的问题
+
+高阶函数是用来**抽象**`通用`的问题
 
 抽象: 可以帮我们屏蔽细节，只需要关注于我们的目标
 
@@ -233,59 +234,92 @@ function some(array, fn){
 ```
 
 
-find
+`find`: 返回数组中满足提供的测试函数的第一个元素的值
 ```js
 function find(array, fn){
-  
-
-
+  for(let item of array){
+    if(fn(item)){
+      return item
+    }
+  }
+  return undefined
 }
 ```
 
-findIndex
+`findIndex`: 返回数组中找到的元素的索引，而不是其值
 ```js
 function findIndex(array, fn){
-  
-
-
+  for(let i = 0; i < array.length; i++){
+    if(fn(array[i])){
+      return i
+    }
+  }
+  return undefined
 }
 ```
 
-reduce
-```js
-function reduce(array, fn){
-  
+## 闭包
 
+### 基本概念
 
-}
-```
-
-sort
-```js
-function sort(array, fn){
-  
-
-
-}
-```
-### 闭包
 闭包 (Closure)：函数和其周围的状态(词法环境)的引用捆绑在一起形成闭包。
 
 可以在另一个作用域中调用一个函数的内部函数并访问到该函数的作用域中的成员
 
-闭包的本质：函数在执行的时候会放到一个执行栈上当函数执行完毕之后会从执行栈上移除，但是堆上的作用域成员因为被外部引用不能释放，因此内部函数依然可以访问外部函数的成员
+
+函数作为返回值，并引用了外面函数中的变量
+```js
+function makeFn () {
+  let msg = 'Hello function' // 正常情况下 msg在函数执行完后会被释放
+  return function () {
+    console.log(msg)
+  }
+}
+```
+
+```js
+// once
+function once (fn) {
+  let done = false // done 不会被释放
+  return function () {
+    if (!done) {
+      done = true
+      return fn.apply(this, arguments)
+    }
+  }
+}
+```
+
+闭包的本质：函数在执行的时候会放到一个执行栈上，当函数执行完毕之后会从执行栈上移除，
+但是**堆上的作用域成员因为被外部引用不能释放**，因此内部函数依然可以访问外部函数的成员
 
 
-闭包案例
+### 闭包案例
 
 ```js
 // 生成计算数字的多少次幂的函数
 function makePower (power) {
-  return function (x) {
-    return Math.pow(x, power)
+  return function (number) {
+    return Math.pow(number, power)
   }
 }
 let power2 = makePower(2)
 let power3 = makePower(3)
+
+console.log(power2(4))
 ```
 
+```js
+// 第一个数是基本工资，第二个数是绩效工资
+function makeSalary (base) {
+  return function (y) {
+    return base + y
+  }
+}
+
+let salaryLevel1 = makeSalary(1500)
+let salaryLevel2 = makeSalary(2500)
+
+console.log(salaryLevel1(2000))
+console.log(salaryLevel2(3000))
+```
