--- a/docs/fe_basics/ES6/01变量声明.md
+++ b/docs/fe_basics/ES6/01变量声明.md
@@ -1,8 +1,8 @@
-@[toc]
+
 - ECMAScript变量是松散类型的，意思是变量可以用于保存任何类型的数据
 - 每个变量只不过是一个用于保存任意值的命名占位符
-- 有3个关键字可以声明变量：var、const和let
-- 其中，var在ES的所有版本中都可以使用，而const和let只能在ES6及更晚的版本中使用
+- 有3个关键字可以声明变量：`var`、`const`和`let`
+- 其中，`var`在ES的所有版本中都可以使用，而`const`和`let`只能在ES6及更晚的版本中使用
 
 # 1. var
 ```javascript
@@ -64,6 +64,7 @@ foo(); // undefined
 ```
 
 ## 2.2 暂时性死区
+
 - let与var的另一个重要的区别，就是let声明的变量**不会在作用域中被提升**
 - 在解析代码时，JavaScript 引擎也会注意出现在块后面的let 声明，只不过在此之前不能以任何方式来引用未声明的变量
 - 在let声明之前的执行瞬间被称为“暂时性死区”（temporal dead zone），在此阶段引用任何后面才声明的变量都会抛出 ReferenceError
@@ -77,6 +78,7 @@ if(true){
 }
 ```
 ### 仔细解释一下暂时性死区
+
 - 只要块级作用域内存在let命令，它所声明的变量就“绑定”（binding）这个区域，不再受外部的影响。
 - ES6 明确规定，如果区块中存在let和const命令，这个区块对这些命令声明的变量，从一开始就形成了封闭作用域。
 - 凡是在声明之前就使用这些变量，就会报错。
@@ -96,6 +98,7 @@ if (true) {
 ```
 
 - “暂时性死区”也意味着typeof不再是一个百分之百安全的操作。（在没有let之前，typeof运算符是百分之百安全的，永远不会报错）
+
 ```javascript
 typeof x; // ReferenceError
 let x;
@@ -223,6 +226,7 @@ for (let i = 0; i < 3; i++) {
 1. 不使用var
 
 2. const优先，let次之
+
 这样可以让开发者更有信心地推断某些变量的值永远不会变，同时也能迅速发现因意外赋值导致的非预期行为
 
 
