--- a/docs/fe_basics/ES6/03解构赋值.md
+++ b/docs/fe_basics/ES6/03解构赋值.md
@@ -1,8 +1,8 @@
 > ES6 允许按照一定模式，从数组和对象中提取值，对变量进行赋值，这被称为**解构（Destructuring）**
 
-@[toc]
 
 # 1. 数组的解构
+
 > 只要某种数据结构具有 Iterator 接口，都可以采用数组形式的解构赋值
 
 ```javascript
@@ -173,10 +173,12 @@ f({z: 3, y: 2, x: 1});
 ```
 
 # 4. 解构内部
-- 解构在内部使用函数ToObject()把源数据解构转换成对象
-- 原始值会被当成对象，而null与undefined不能解构
+
+- 解构在内部使用函数`ToObject()`把源数据解构转换成对象
+- 原始值会被当成对象，而`null`与`undefined`不能解构
 
 # 5. 几个注意点
+
 1. 嵌套解构——浅赋值
 2. 部分解构——无“回滚”
 
