--- a/docs/fe_basics/ES6/04对象增强.md
+++ b/docs/fe_basics/ES6/04对象增强.md
@@ -118,6 +118,26 @@ Object.assign(target, ...source)
 
 判断两个值是否相等
 
+# Object.entries()
+
+```js
+const obj = {
+  foo: 'value1',
+  bar: 'value2'
+}
+
+console.log(Object.entries(obj)) // ['foo','value1'],['bar', 'value2']
+
+// 使用for...of遍历普通对象
+for(const [key, value] of Object.entries(obj)){
+  console.log(key, value)
+}
+
+// 将对象转换成Map
+new Map(Object.entries(obj))
+```
+
+
 
 ### 参考资料
 1. [JavaScript高级程序设计(第四版)](https://www.ituring.com.cn/book/2472)P213-216  https://www.ituring.com.cn/book/2472
