--- a/docs/fe_basics/ES6/10迭代器.md
+++ b/docs/fe_basics/ES6/10迭代器.md
@@ -1,11 +1,12 @@
 
 # 1. 迭代器
 
-> 迭代器（Iterator）就是一种机制。它是一种接口，为各种不同的数据结构提供统一的访问机制。任何数据结构只要部署 Iterator接口，就可以完成遍历操作
+> 迭代器（Iterator）就是一种机制。它是一种接口，为各种不同的数据结构提供统一的访问机制。任何数据结构只要部署 Iterator 接口，就可以完成遍历操作
 
 ## 1.1 介绍
 
-1) ES6创造了一种新的遍历命令 `for...of` 循环， Iterator接口主要供 `for...of`消费
+1) ES6创造了一种新的遍历命令 `for...of` 循环，其是一种数据统一遍历方式。Iterator接口主要供 `for...of`消费
+
 
 2) 原生具备 iterator 接口的数据 (可用 `for...of` 遍历 )
    - a) Array
@@ -48,7 +49,7 @@ const banji = {
 		let index = 0;
 		let _this = this;
 		return {
-			next:function(){
+			next: function(){
 				if(index < _this.stus.length){
 					const result = { value: _this.stus[index], done: false }
 					index++;
@@ -60,8 +61,52 @@ const banji = {
 		};
 	}
 }
+
 for(let v of banji) {
 	console.log(v);  
 }
 // 'xiaoming','xiaoning','xiaotian','knight'
 ```
+
+```js
+const obj = {
+  store: ['foo', 'bar', 'baz']
+  [Symbol.iterator]: function() {
+    let index = 0
+    const self = this
+    return {
+      next: function(){
+        const result = {
+          value: self.store[index],
+          done: index >= self.store.length
+        }
+        index++
+        return result
+      }
+    }
+  }
+}
+```
+
+再次简写
+```js
+const obj = {
+  store: ['foo', 'bar', 'baz']
+  [Symbol.iterator]: function() {
+    let index = 0
+    const self = this
+    return {
+      next: function(){
+        return {
+          value: self.store[index],
+          done: index++ >= self.store.length
+        }
+      }
+    }
+  }
+}
+```
+
+## 迭代器模式
+
+对外提供统一的遍历接口，不用关心其内部数据结构
