--- a/docs/fe_basics/ES6/11生成器.md
+++ b/docs/fe_basics/ES6/11生成器.md
@@ -1,24 +1,25 @@
 
-# 2. 生成器
-生成器函数是 ES6提供的一种异步编程解决方案，语法行为与传统函数完全不同
-
+> 生成器函数是 ES6提供的一种异步编程解决方案，语法行为与传统函数完全不同
 
 ## 2.1 声明与调用
 ### `*` 的位置没有限制
+
 ```javascript
 function * gen(){
 	console.log('hello generator');
 }
-gen(); 
+
+gen(); // 函数没有执行，而是返回了一个生成器对象
 let iterator = gen();
 console.log(iterator) //  gen {<suspended>}
+
 iterator.next(); // hello generator  【{value: undefined, done: true}】
 ```
 
-
 ### 函数代码分隔符 `yield`
-2) 生成器函数返回的结果是迭代器对象，调用迭代器对象的 next 方法可以得到 yield 语句后的值
-3) yield 相当于函数的暂停标记，也可以认为是函数的分隔符，每调用一次 next 方法，执行一段代码
+
+- 生成器函数返回的结果是迭代器对象，调用迭代器对象的 next 方法可以得到 
+- yield 相当于函数的暂停标记，也可以认为是函数的分隔符，每调用一次 next 方法，执行一段代码
 
 ```javascript
 function * gen(){ 
@@ -26,7 +27,9 @@ function * gen(){
 	yield '一只没有尾巴'; 
 	return '真奇怪'; 
 } 
+
 let iterator = gen(); 
+
 console.log(iterator.next()); // {value: "一只没有耳朵", done: false}
 console.log(iterator.next()); // {value: "一只没有尾巴", done: false}
 console.log(iterator.next()); // {value: "真奇怪", done: true}
@@ -44,14 +47,64 @@ function * gen(){
 }
 
 let iterator = gen();
+
 iterator.next(); // 111    【{value: "一只没有耳朵", done: false}】
 iterator.next(); // 222    【{value: "一只没有尾巴", done: false}】
 iterator.next(); // 333    【{value: "真奇怪", done: false}】
 iterator.next(); // 444    【{value: undefined, done: true}】
-
 ```
+
+实际案例1：发号器
+
+```js
+function * createIdMaker() {
+  let id = 1
+  while(true){
+    yield id++
+  }
+}
+
+const idMaker = createIdMaker()
+console.log(idMaker.next().value) // 1
+console.log(idMaker.next().value) // 2
+console.log(idMaker.next().value) // 3
+```
+
+实际案例2：使用 Generator 函数实现 iterator 方法
+
+原来的
+```js
+const obj = {
+  store: ['foo', 'bar', 'baz']
+  [Symbol.iterator]: function() {
+    let index = 0
+    const self = this
+    return {
+      next: function(){
+        return {
+          value: self.store[index],
+          done: index++ >= self.store.length
+        }
+      }
+    }
+  }
+}
+```
+改进后
+
+```js
+const obj = {
+  store: ['foo', 'bar', 'baz']
+  [Symbol.iterator]: function * () {
+    for (const item of this.store){
+      yield item
+    }
+  }
+}
+```
+
 ### 传递实参
-4) next 方法可以传递实参，作为 yield 语句的返回值
+-  next 方法可以传递实参，作为 yield 语句的返回值
 
 ```javascript
 function * gen(arg) {
@@ -66,14 +119,19 @@ function * gen(arg) {
 	const three = yield 333;
 	console.log(three);
 }
+
 let iterator = gen('AAA');
+
 console.log(iterator.next()); // AAA {value: 111, done: false}
 console.log(iterator.next('BBB')); // BBB {value: 222, done: false}
 console.log(iterator.next('CCC')); // CCC {value: 333, done: false}
 console.log(iterator.next('DDD')); // DDD {value: undefined, done: true}
 ```
+
 ## 生成器函数实例
+
 异步编程实例，1s后控制台输出111，2s后输出222，3s后输出333
+
 回调地狱
 ```javascript
 setTimeout(()=>{
@@ -86,6 +144,7 @@ setTimeout(()=>{
 	}, 2000);
 }, 1000);
 ```
+
 生成器函数
 ```javascript
 function one() {
