--- a/docs/fe_advance/typescript/03枚举类型.md
+++ b/docs/fe_advance/typescript/03枚举类型.md
@@ -1,6 +1,4 @@
-
 > 今天我们来简单介绍介绍TS中新增的枚举类型
-
 
 # 起步
 
@@ -9,16 +7,18 @@
 ```js
 let person = { name: 'yk', gender: 'male' }
 ```
+
 像`gender`这种属性的取值一般只有两个，所以在存储的时候用数字来代替，可以提高效率，可以定义`0`表示女性，`1`表示男性
 
 ```js
 let person = { name: 'yk', gender: 1 }
 ```
+
 但是这样可读性变差了，而且还不方便管理，这就引出我们今天要谈的**枚举类**了
 
 > 枚举就是一组有名字的常量集合
-我们再举一个形象一点的例子，我们手机里都存储了各种朋友的手机号，记住手机号和人的对应关系可太难了，通讯录像是一个枚举类，将人名与手机号做映射，我们只需要看人名就可以了~
 
+我们再举一个形象一点的例子，我们手机里都存储了各种朋友的手机号，记住手机号和人的对应关系可太难了，通讯录像是一个枚举类，将人名与手机号做映射，我们只需要看人名就可以了~
 
 
 # 默认枚举【数字枚举】
@@ -102,11 +102,9 @@ enum Gender {
 }
 ```
 
-
-
 # 常量枚举
-在`enum`前面加上const，表示常量枚举
 
+在`enum`前面加上const，表示常量枚举
 
 我们先看普通的枚举类型转义之后是什么
 
@@ -119,7 +117,4 @@ enum Gender {
 可以看到，代码一下子精简了很多。定义的枚举类编译之后直接以值（常量）的形式来使用
 
 
-
-
-
-> 今天就先介绍这么多啦~ 阿宝哥有一篇博文写的特别详细: [一文让你彻底掌握 TS 枚举](https://juejin.cn/post/6844904112669065224) <br>最后，欢迎关注我的专栏，和**YK菌**做好朋友
+> 今天就先介绍这么多啦~ 阿宝哥有一篇博文写的特别详细: [一文让你彻底掌握 TS 枚举](https://juejin.cn/post/6844904112669065224) 
