--- a/docs/fe_advance/typescript/02类型声明.md
+++ b/docs/fe_advance/typescript/02类型声明.md
@@ -92,7 +92,18 @@ console.log(sum(1, 2)) // 3
 console.log(sum(1, '2')) // '12'
 ```
 
-而用ts定义是需要考虑参数的**类型**和**个数**
+因为`function`是关键字，所有这里用`Function`来声明函数
+
+```js
+let fn: Function
+```
+
+![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d14ad7e9f099494e8b91bdcb19d004c8~tplv-k3u1fbpfcp-watermark.image?)
+
+和对象一样，我们一般会限制函数有几个参数，参数的类型，返回值的类型
+
+
+而用ts定义是需要考虑参数的**类型**和**个数**，使用函数声明的方式
 
 ```ts
 function sum(a: number, b: number): number{
@@ -116,6 +127,16 @@ console.log(sum(1, 2)) // 3
 ```ts
 function sum(x: number, y: number) => x + y
 ```
+
+
+还可以以一种类似箭头函数的方式来声明一个函数类型的变量
+
+```ts
+// 定义函数结构
+let fn: (a: number, b: number) => number
+```
+
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5d6d067b564a4a63a7b0761cfcc921e7~tplv-k3u1fbpfcp-watermark.image?)
 
 ## 2.4 类型详解
 
@@ -281,29 +302,11 @@ let obj: { name: string, [propName: string]: unknown }
 obj = {name: 'yk', age: 18, gender: 'male'}
 ```
 
-
+> 其实在ts中，限制对象的类型，我们一般会使用**接口**这种类型~ 
 
 ### 函数
 
-因为`function`是关键字，所有这里用`Function`来声明函数
 
-```js
-let fn: Function
-```
-
-![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d14ad7e9f099494e8b91bdcb19d004c8~tplv-k3u1fbpfcp-watermark.image?)
-
-和对象一样，我们一般会限制函数有几个参数，参数的类型，返回值的类型，所以就可以以一种类似箭头函数的方式来声明一个函数类型的变量
-
-
-
-```ts
-// 定义函数结构
-let fn: (a: number, b: number) => number
-```
-
-
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5d6d067b564a4a63a7b0761cfcc921e7~tplv-k3u1fbpfcp-watermark.image?)
 
 
 ### 数组
@@ -314,8 +317,6 @@ let arr: number[] = [1, 2, 3]
 let arr2: string[] = ['y', 'k']
 ```
 
-
-
 还有一种是使用**泛型**（后面会说什么是泛型）:
 
 ```ts
@@ -325,26 +326,19 @@ let list: Array<number | string> = [1, 2, 3, 'yk']
 ```
 
 
-
-
 ### 元组 Tuple
 
 元组是TS新出的类型，表示固定长度的`array`
 
 元组中包含的元素，必须与声明的类型一致，而且不能**多**、不能**少**，甚至**顺序**都不能不一样
 
-
 ![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/713616515d474f5a99b8d97520f38383~tplv-k3u1fbpfcp-watermark.image?)
-
 
 ![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/829e83e405cb428ea17b7cde6b95ca8a~tplv-k3u1fbpfcp-watermark.image?)
 
 
-
-
 ### 字面量
 也可以使用字面量去指定变量的类型，这相当于给他设置成了一个常量
-
 
 ```js
 let a: 10
@@ -407,19 +401,19 @@ let fun: fn = (x, y) => x + y
 
 
 # 3. 类型断言
+
 有些情况下，变量的类型对于我们来说是很明确，但是TS编译器却并不清楚，此时，可以通过类型断言来告诉编译器变量的类型，断言有两种形式：
 
-第一种
+第一种 使用 `as` 关键字
 
 ```ts
 let someValue: unknown = "this is a string";
 let strLength: number = (someValue as string).length;
 ```
 
-第二种
+第二种 使用 `<>` （在写jsx时，就不能使用这种方式）
 
 ```ts
 let someValue: unknown = "this is a string";
 let strLength: number = (<string>someValue).length;
 ```
-
