--- a/docs/fe_advance/typescript/03枚举类型.md
+++ b/docs/fe_advance/typescript/03枚举类型.md
@@ -72,8 +72,6 @@ console.log(Gender[0]) // male
 
 当然不止数字类型，也可以定义成**字符串**类型
 
-
-
 ```ts
 enum Gender {
   'male'= 'this is male.',
@@ -83,10 +81,9 @@ enum Gender {
 
 这样就提供了有意义且可调试的字符串，因此可以被更容易地处理和调试
 
-
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6722b23667ef4659b151fdf94dce0555~tplv-k3u1fbpfcp-watermark.image?)
 
-我买看转义成js是什么样的
+看看转义成js是什么样的
 
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/d1946340276a4c09874f5db88b355947~tplv-k3u1fbpfcp-watermark.image?)
 
