--- a/docs/fe_advance/typescript/04配置选项.md
+++ b/docs/fe_advance/typescript/04配置选项.md
@@ -1,12 +1,3 @@
----
-theme: fancy
-highlight: a11y-dark
----
-
-> 嗨！~ 大家好，我是YK菌 🐷 ，一个微系前端 ✨，爱思考，爱总结，爱记录，爱分享 🏹，欢迎关注我呀 😘 ~ [微信号: `yk2012yk2012`，微信公众号：`ykyk2012`]
-
-
-「这是我参与11月更文挑战的第29天，活动详情查看：[2021最后一次更文挑战](https://juejin.cn/post/7023643374569816095/ "https://juejin.cn/post/7023643374569816095/")」
 
 > 今天我们主要来学习TS的编译选项
 
@@ -163,8 +154,8 @@ tsc xxx.ts -w
     "importHelpers": true,  // 从 tslib 导入辅助工具函数
     "lib": ["es6", "dom"],  // 指定要包含在编译中的库文件
     "typeRoots": ["node_modules/@types"],
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist", // 编译结果输出目录
+    "rootDir": "./src" // 源代码ts所在目录
   },
   "include": [  
     "./src/**/*.ts"
@@ -364,7 +355,3 @@ tsc xxx.ts -w
 | allowUnreachableCode | 检查不可达代码；true：忽略不可达代码，false：不可达代码将引起错误 |
 | noEmitOnError | 有错误的情况下不进行编译，默认值：false |
 
-
-
-
-> 最后，欢迎关注我的专栏，和**YK菌**做好朋友
