--- a/docs/fe_basics/html/05表单标签.md
+++ b/docs/fe_basics/html/05表单标签.md
@@ -1,43 +1,28 @@
-> 学习HTML中的表单标签及其相关属性
+> 学习HTML中的表单标签及其相关属性[HTML表单指南 - 学习 Web 开发 | MDN (mozilla.org)](https://developer.mozilla.org/zh-CN/docs/Learn/Forms)
 
-制作一个基本的表单需要三个元素：`form`、`input`和`button`元素。
-
-
-```html
-<form method="post" action="http://www.yk.com/form">
-  <input name="fave" />
-  <button>提交</button>
-</form>
-```
-
-
-
-
-
-# 12. 表单标签
-
-收集用户信息
+表单用来收集用户信息
 
 组成
 - 表单域
 - 表单控件（表单元素）
 - 提示信息
 
-### 12.1 表单域
+### 表单域
 
-**表单域** 是一个 **包含表单元素的区域** 
+> **表单域** 是一个 **包含表单元素的区域** 
 
-**form**标签用于定义表单域，以实现用户信息的收集和传递
+`<form></form>` 标签用于定义表单域，以实现用户信息的收集和传递
 
-**form 会把它范围内的表单元素信息提交给服务器**
+`form` 会把它范围内的表单元素信息提交给服务器
+
 ```html
 <form action="url地址" method="提交方式get/post" name="表单域名称">
     各种表单控件
 </form>
 ```
-### 12.2 表单控件（表单元素）
+### 表单控件（表单元素）
 
-#### 12.2.1 input 收集用户信息
+####  `input` 收集用户信息
 
 ```html
 <intput type="属性值" name="" value="" checked="checked" maxlength=""/>
@@ -59,17 +44,34 @@ text | 单行的输入字段，用户可在其中输入文本，默认宽度为2
 
 其他属性 | 属性值 | 描述
 ---|--- | ---
-name | 用户自定义 | 定义input元素的名称
-value | 用户自定义 | 规定input元素的值
-checked | checked | 规定此input元素首次加载时应当被选中
-maxlength | 正整数 | 规定输入字段中字符的最大长度
+`name` | 用户自定义 | 定义input元素的名称
+`value` | 用户自定义 | 规定input元素的值
+`checked` | checked | 规定此input元素首次加载时应当被选中
+`maxlength` | 正整数 | 规定输入字段中字符的最大长度
 
 **注意**
 1. name和value每个表单都有的属性值，主要给后台人员使用
 2. name表单元素的名字，要求**单选按钮和复选框要有相同的name值**
 3. checked 针对单选、复选 打开页面默认选中某个元素
 
-#### 12.2.2 label 标注/标签
+
+新增的input类型
+
+属性值|说明
+---|---
+type="email"|限制用户输入必须为email类型
+url|url
+data|日期
+time|时间
+month|月
+week|周
+number|数字
+tel|手机号码
+search|搜索框
+color|生成一个颜色选择表单
+
+
+#### label 标注/标签
 
 绑定一个表单元素，当点击label标签内文本时，浏览器自动将光标转到或选择对应的表单元素上，用来增加用户体验
 
@@ -80,11 +82,19 @@ maxlength | 正整数 | 规定输入字段中字符的最大长度
 <input type="radio" name="sex" id="sex" /> 
 ```
 
-#### 12.2.3 select下拉表单元素
+#### button 标签
+
+```html
+<button type="submit">Send your message</button>
+```
+submit 提交表单
+reset 重置表单
+button 没有行为
+#### select下拉表单元素
 
 ```html
 <select>
-    <option>选项1</option>
+    <option selectd="selected">选项1</option>
     <option>选项2</option>
     <option>选项3</option>
 </select>
@@ -96,7 +106,7 @@ maxlength | 正整数 | 规定输入字段中字符的最大长度
 2. option中定义selectd="selected"，当前项为默认项
 
 
-#### 12.2.4 textarea文本域元素
+#### textarea文本域元素
 
 多行文本输入（留言板、评论）
 
@@ -113,21 +123,10 @@ maxlength | 正整数 | 规定输入字段中字符的最大长度
 - IE9+以上版本才支持
 
 
-# 3. 新增的input类型
-属性值|说明
----|---
-type="email"|限制用户输入必须为email类型
-url|url
-data|日期
-time|时间
-month|月
-week|周
-number|数字
-tel|手机号码
-search|搜索框
-color|生成一个颜色选择表单
 
-# 4. 新增的表单属性
+
+新增的表单属性
+
 属性|值|说明
 ---|---|---
 required|required| 必填。表单拥有该属性表示其内容不能为空
